<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:context=".BloqueoActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bloqueo"
        android:contentDescription="@string/imagedescription" />

    <TextView
        android:id="@+id/textViewMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajebloqueo"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textViewCronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cronometrodefault"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textViewEstadoNotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadonotificacionesdefault"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esperalogros"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>

