<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/formulario"
        android:contentDescription="@string/empty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promptminutos"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/minutosEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:padding="8dp"
        android:background="@drawable/edittext_custom_background"
        android:textColor="#000000"
        android:gravity="center"
        android:hint="@string/empty"
        android:textSize="25sp"
        android:autofillHints="@string/autofillhintsminutos" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promptnotificaciones"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/bloquearNotifSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2"
        android:scaleY="2" />

    <Button
        android:background="@drawable/button_rounded_background"
        android:id="@+id/bloquearButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/promptbloquear"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>


